syntax = "proto3";

option go_package = "github.com/DiMalovanyy/University_Sem7/IT/DB/model/proto"; 

import public "google/protobuf/empty.proto";

message Data {
    oneof data {
        google.protobuf.Empty emptyData = 1;
        int64 integerData = 2;
        float floatData = 3;
        string stringData = 4;
        PictureData pictureData = 5;
        IntervalData intervalData = 6;
    }
}

message PictureData {
    string pictureName = 1;
    string pictureFormat = 2;
}

message IntervalData {
    int64 fromVal = 1;
    int64 toVal = 2;
}
